# summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.md
summarizer/: __main__.py  app.py  settings.toml
